--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,10 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "pnpm install && pnpm run build && mkdir -p backend/static && cp -r dist/* backend/static/"
+buildCommand = "pnpm install && pnpm run build && cp -r dist/* backend/static/"
 
 [deploy]
 startCommand = "python backend/main.py"
-healthcheckPath = "/api/game/health"
-healthcheckTimeout = 300
+# Remove the health check lines
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
